--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "core-js-pure": "^3.40.0",
     "es-abstract": "^1.23.9",
     "eslint-config-react-app": "^7.0.1",
